--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div>
+  <p><%= @book.title %></p>
+  <p><%= @book.body %></p>
+  <p><%= image_tag 'sample-author1.jpg' %>
+  <p><%= @book.user.name %></p>
+</div>
