--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,9 @@
 <div>
   <p><%= @book.title %></p>
   <p><%= @book.body %></p>
-  <p><%= image_tag 'sample-author1.jpg' %>
+  <p>User image：<%= image_tag @book.user.get_profile_image(63,63) %></p>
   <p><%= @book.user.name %></p>
+  <% if @book.user == current_user %>
+    <%= link_to "Destroy", book_path(@book), method: :delete %>
+  <% end %>
 </div>
