--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,33 +1,89 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>Bookers2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.css" type="text/css" media="all" />
+    <script src="https://kit.fontawesome.com/9f877dc7a0.js" crossorigin="anonymous"></script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
     <header>
-     <% if user_signed_in? %>
-      <li>
-        <%= link_to '投稿フォーム', new_book_path %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <div class="container">
+        <a class="navbar-brand" href="/"><span>Bookers</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+         <ul class="navbar-nav ml-auto">
+
+          <% if user_signed_in? %>
+           <li>
+            <a class="fas fa-home nav-link text-light"<%= link_to ' Home', user_path(current_user.id) %>></a>
+           </li>
+           <li>
+            <a class="fas fa-users nav-link text-light"<%= link_to ' Users', users_path %>></a>
+           </li>
+           <li>
+            <a class="fas fa-book-open nav-link text-light"<%= link_to ' Books', books_path %>></a>
+           </li>
+           <li>
+            <a class="fas fa-sign-out-alt nav-link text-light"<%= link_to " Log out", destroy_user_session_path, method: :delete %>></a>
+           </li>
+          <% else %>
+         <li>
+        <i class="fa-solid fa-house-chimney"></i>
+        <a><%= link_to "Home", root_path %></a>
       </li>
       <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-     <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
+        <i class="fa-solid fa-link"></i>
+        <a><%= link_to "About", about_path %></a>
       </li>
       <li>
-        <%= link_to "ログイン", new_user_session_path %>
+        <i class="fa-solid fa-user-plus"></i>
+        <a><%= link_to "Sign up", new_user_registration_path %></a>
       </li>
-     <% end %>
+      <li>
+        <i class="fa-solid fa-right-to-bracket"></i>
+        <a><%= link_to "Log in", new_user_session_path %></a>
+      </li>
+         </ul>
+        </div>
+       </div>
+      </nav>
+          <% end %>
     </header>
+
+    <main>
+
+      <div class="text-success">
+      <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+      <% end %>
+      </div>
+    <p id="notice"></p>
     <%= yield %>
+
+    </main>
+
+    <footer>
+      <div class="container mt-5">
+      <div class="row">
+      <div class="mx-auto">
+       <p>CopyRight Infratop.inc</p>
+      </div>
+      </div>
+      </div>
+    </footer>
+
   </body>
 </html>
