--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,34 +28,47 @@
 
           <% if user_signed_in? %>
            <li>
-            <a class="fas fa-home nav-link text-light"<%= link_to ' Home', user_path(current_user.id) %>></a>
+            <%= link_to  user_path(current_user.id), class:"nav-link text-light" do %>
+            <i class="fas fa-home"></i> Home
+            <% end %>
            </li>
            <li>
-            <a class="fas fa-users nav-link text-light"<%= link_to ' Users', users_path %>></a>
+            <%= link_to users_path, class:"nav-link text-light" do %>
+            <i class="fas fa-users"></i> Users
+            <% end %>
            </li>
            <li>
-            <a class="fas fa-book-open nav-link text-light"<%= link_to ' Books', books_path %>></a>
+            <%= link_to books_path, class:"nav-link text-light" do %>
+            <i class="fas fa-book-open"></i> Books
+            <% end %>
            </li>
            <li>
-            <a class="fas fa-sign-out-alt nav-link text-light"<%= link_to " Log out", destroy_user_session_path, method: :delete %>></a>
+            <%= link_to destroy_user_session_path, method: :delete, class:"nav-link text-light" do %>
+            <i  class="fas fa-sign-out-alt"></i> Log out
            </li>
+           <% end %>
           <% else %>
-         <li>
-        <i class="fa-solid fa-house-chimney"></i>
-        <a><%= link_to "Home", root_path %></a>
-      </li>
-      <li>
-        <i class="fa-solid fa-link"></i>
-        <a><%= link_to "About", about_path %></a>
-      </li>
-      <li>
-        <i class="fa-solid fa-user-plus"></i>
-        <a><%= link_to "Sign up", new_user_registration_path %></a>
-      </li>
-      <li>
-        <i class="fa-solid fa-right-to-bracket"></i>
-        <a><%= link_to "Log in", new_user_session_path %></a>
-      </li>
+          <li>
+            <%= link_to  root_path, class:"nav-link text-light" do %>
+            <i class="fas fa-home"></i> Home
+            <% end %>
+           </li>
+           <li>
+            <%= link_to about_path, class:"nav-link text-light" do %>
+            <i class="fa-solid fa-link"></i> About
+            <% end %>
+           </li>
+           <li>
+            <%= link_to new_user_registration_path, class:"nav-link text-light" do %>
+            <i class="fa-solid fa-user-plus"></i> Sign up
+            <% end %>
+           </li>
+           <li>
+            <%= link_to new_user_session_path, class:"nav-link text-light" do %>
+            <i  class="fa-solid fa-right-to-bracket"></i> Log in
+            <% end %>
+           </li>
+
          </ul>
         </div>
        </div>
