--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,49 @@
-<% @books.each do |book| %>
-<div>
-  <p>User image：<%= image_tag book.user.get_profile_image(63,63) %></p>
-  <%= link_to book_path(book.id) do %>
-  <p>Title：<%= book.title %></p>
-  <% end %>
-  <p>Opinion：<%= book.body %></p>
-  <p>User name：<%= book.user.name %></p>
-</div>
-<% end %>
+ <div class="container px-5 px-sm-0">
+    <div id="error_explanation">
+      <% if @book.errors.any? %>
+      <h3><%= @book.errors.count %>errors prohibited this obj from being saved:</h3>
+      <ul>
+       <% @book.errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+       <% end %>
+      </ul>
+      <% end %>
+    </div>
+    <div class="row">
+     <div class="col-md-3">
+      <%= render 'users/user_sidebar', user: @user %>
+      <%= render 'books/book_sidebar', book: @book %>
+     </div>
+
+     <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td><a href="/users/65684">
+          <%= link_to book_path(book.id) do %>
+           <%= image_tag book.user.get_profile_image(63,63), class:"attachment user profile_image fallback" %>
+</a>        </td>
+        <td><%= book.title %>/td>
+        <% end %>
+        <td><%= book.body %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+    </div>
+    </div>
+    </div>
+
+
+
+
