--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,7 @@
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
+
 <h2>Sign up</h2>
 
 <%= form_with model: @user, url: user_registration_path do |f| %>
@@ -25,10 +29,14 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
+</br>
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class:"btn btn-sm btn-success" %>
   </div>
 <% end %>
-
+</br>
 <%= render "devise/shared/links" %>
+
+ </div>
+  </div>
+</div>
