--- a/app/views/users/users.html.erb
+++ b/app/views/users/users.html.erb
@@ -1,9 +1,40 @@
-<% @users.each do |user| %>
-<div>
-  <p><%= image_tag user.get_profile_image(63,63) %></p>
-  <p><%= user.name %></p>
-  <%= link_to user_path(user.id) do %>
-  show
-  <% end %>
+<div class="container px-5 px-sm-0">
+    <div class="row">
+     <div class="col-md-3">
+      <%= render 'users/user_sidebar', user: @user %>
+      <%= render 'books/book_sidebar', book: @book %>
+     </div>
+     <div class="col-md-8 offset-md-1">
+       <h2>Users</h2>
+       <table class="table">
+         <thead>
+           <tr>
+             <th>image</th>
+             <th>name</th>
+             <th colspan="3"></th>
+           </tr>
+         </thead>
+         <tbody>
+           <% @users.each do |user| %>
+           <tr>
+             <td>
+              <%= image_tag user.get_profile_image(63,63), class:"attachment user profile_image fallback" %>
+             </td>
+             <td>
+               <%= user.name %>
+             </td>
+             <td>
+               <%= link_to user_path(user.id) do %>
+               show
+               <% end %>
+             </td>
+           </tr>
+           <% end %>
+         </tbody>
+      </table>
+
+
+
 </div>
-<% end %>
+</div>
+</div>
