--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
      <% @books.each do |book| %>
      <tr>
       <td>
-          <%= link_to book_path(book.id) do %>
+          <%= link_to user_path(@user) do %>
           <%= image_tag book.user.get_profile_image(63,63), class:"attachment user profile_image fallback" %>
           <% end %>
       </td>
