--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,12 +29,16 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><a href="/users/65684">
-          <%= link_to book_path(book.id) do %>
+        <td>
+           <%= link_to user_path(book.user.id) do %>
            <%= image_tag book.user.get_profile_image(63,63), class:"attachment user profile_image fallback" %>
-</a>        </td>
-        <td><%= book.title %>/td>
-        <% end %>
+           <% end %>
+        </td>
+        <td>
+         <%= link_to book_path(book) do %>
+         <%= book.title %>
+         <% end %>
+        </td>
         <td><%= book.body %></td>
       </tr>
     <% end %>
