--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,17 +55,17 @@
            </li>
            <li>
             <%= link_to about_path, class:"nav-link text-light" do %>
-            <i class="fa-solid fa-link"></i> About
+            <i class="fas fa-link"></i> About
             <% end %>
            </li>
            <li>
             <%= link_to new_user_registration_path, class:"nav-link text-light" do %>
-            <i class="fa-solid fa-user-plus"></i> Sign up
+            <i class="fas fa-user-plus"></i> Sign up
             <% end %>
            </li>
            <li>
             <%= link_to new_user_session_path, class:"nav-link text-light" do %>
-            <i  class="fa-solid fa-right-to-bracket"></i> Log in
+            <i  class="fas fa-sign-in-alt"></i> Log in
             <% end %>
            </li>
 
