--- a/app/views/users/_user_sidebar.html.erb
+++ b/app/views/users/_user_sidebar.html.erb
@@ -19,4 +19,9 @@
     <i class="fas fa-user-cog"></i>
     <% end %>
   <% end %>
+  <% if user != current_user %>
+    <%= link_to user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
+    <i class="fas fa-user-cog"></i>
+    <% end %>
+  <% end %>
 </div>
