--- a/app/views/users/users.html.erb
+++ b/app/views/users/users.html.erb
@@ -25,7 +25,7 @@
              </td>
              <td>
                <%= link_to user_path(user.id) do %>
-               show
+               Show
                <% end %>
              </td>
            </tr>
