--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,7 @@
+<% if @book.user != current_user %>
+    <%= redirect_to books_path %>
+          <% end %>
+
 <% if @book.errors.any? %>
   <%= @book.errors.count %>件のerrorが発生しました
   <ul>
@@ -22,7 +26,8 @@
        <%= f.text_area :body, class:"form-control book_body" %>
       </div>
       <div class="form-group">
-       <%= f.submit "Updete Book", class:"btn btn-success" %>
+       <%= f.submit class:"btn btn-success" do %>Updete Book
+       <% end %>
       </div>
       <% end %>
   		<%= link_to book_path(@book.id) do %> Show<% end %>
