--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,7 +20,7 @@
           <td><%= link_to edit_book_path, class:"btn btn-sm btn-success" do %> Edit<% end %></td>
           <% end %>
           <% if @book.user == current_user %>
-          <td><%= link_to book_path(@book), class:"btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？" do %>Delete<% end %></td>
+          <td><%= link_to book_path(@book), class:"btn btn-sm btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？" do %>Destroy<% end %></td>
           <% end %>
 
         </tr>
